# hse-ai24-python-hw3

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Dockerfile.streamlit  LICENSE  README.md  alembic.ini  deploy.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 4e1034736a0e_add_user_project_and_link_models.py  52fce514abb6_create_test_table.py  5deadda6ad5b_create_test_table.py  9a88f9c6ede7_create_users_table.py  a8a5f4afe95d_initial.py
docs/: requirements.md
migrations/: env.py
migrations/versions/: bb3286b7da05_initial_migration.py
src/: main.py
src/api/v1/: router.py
src/app/core/: config.py  database.py  exceptions.py
src/app/models/: __init__.py  base.py  link.py  project.py  relationships.py  test.py  user.py
src/app/schemas/: link.py  project.py  project_member.py  user.py
src/auth/: router.py  users.py
src/core/: config.py  database.py  logger.py  middleware.py  scheduler.py
src/models/: __init__.py  link.py  project.py  user.py
src/schemas/: link.py  project.py  user.py
src/services/: link.py  project.py
src/utils/: cache.py  demo_data.py  utils.py
tests/: conftest.py  fixtures.py  helpers.py  test_database.py  test_real_database.py
tests/integration/: test.py  test_database.py  test_real_database.py  test_user_db.py
tests/performance/: test_user_performance.py
tests/unit/: test_link_model.py  test_models_misc.py  test_project_member.py  test_project_model.py  test_user_methods.py  test_user_model.py
(+4 files in other folders)
