[project]
name = "url-shortener"
version = "0.1.0"
description = "URL Shortener service with project support"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "sqlalchemy==2.0.27",
    "psycopg==3.1.18",
    "redis==5.0.1",
    "pydantic[email,url]==2.6.1",
    "pydantic-settings==2.1.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "alembic==1.13.1",
    "pytest==8.0.0",
    "httpx==0.26.0",
    "streamlit==1.31.1",
    "python-dotenv==1.0.1",
    "sqlmodel>=0.0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src/app --cov-report=term-missing"
pythonpath = [
    "src"
] 
